Added articles content injection

--- a/css/style.css
+++ b/css/style.css
@@ -554,7 +554,7 @@ i.book {
 	font-weight:700;
 	margin-bottom:6px;
 }
-.news-right-grid label {
+.news-right-grid time {
 	color:#b8b8b8;
 	font-size:1em;
 	font-weight:300;
